# null-engine

./: .gitignore  LICENSE  LICENSE-DATA  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: sn_zHEL_1701.npy
examples/: plot_null_overlay.py  test_external.py
paper/: paper.bib  paper.md
results/: diag_12starts_NM_2000.npy  diag_12starts_NM_4000.npy  diag_12starts_Powell.npy  diag_24starts_NM_2000.npy  diag_24starts_Powell.npy  diag_engine_24+retry.npy  null_4pde_N10000.npz  null_4pde_N10000_12start.npz  null_bellde_N10000.npz  null_cplwb_N10000.npz  null_gauss_eos_N10000.npz  null_gauss_eos_N10000_12start.npz  null_gde_N10000.npz  null_lambda_s_N10000.npz  null_lambda_s_N10000_12start.npz  null_pade_N10000.npz  null_wdagger_N10000.npz  null_wdagger_N10000_12start.npz  optimizer_diagnostic.py
src/null_engine/: __init__.py  engine.py  model_spec.py  models.py  plugin_loader.py  validator.py
tests/: conftest.py  test_control.py  test_plugin.py  test_unit.py
